@@ -210,6 +210,7 @@ int InitVars(void)
     ST->sysop = NULL;
     ST->output_charset = NULL;
     ST->input_charset = NULL;
+    ST->enforced_charset = NULL;
     ST->sort_criteria = NULL;
     ST->freqarea = NULL;
     ST->special_characters = NULL;
