@@ -15,5 +15,6 @@ void change_username(void);
 void set_switch(void);
 void show_help(void);
 int handle_rot(int c);
+void sel_chs(void);
 
 #endif
